# Credit-Portfolio-Risk-Engine

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py  model_loader.py  schemas.py
app_streamlit/: app.py
scripts/: 00_inspect_dataset.py  01_inspect_base_table.py  02_create_base_features.py  03_train_base_model.py  04_inspect_static_tables.py  05_create_static_features.py  06_inspect_training_dataset.py  07_train_static_model.py  08_compare_models.py  09_threshold_tuning.py  10_optuna_xgboost_tuning.py  11_inspect_person_tables.py  12_create_person_features.py  13_merge_person_features.py  14_train_static_person_xgboost.py  15_inspect_applprev_tables.py  16_create_applprev_features.py  17_merge_applprev_features.py  18_train_static_person_applprev_xgboost.py  19_inspect_bureau_tables.py  20_create_bureau_b_features.py  21_merge_bureau_b_features.py  22_train_static_person_applprev_bureaub_xgboost.py  23_create_bureau_a1_features.py  23_create_bureau_a1_features_light.py  24_merge_bureau_a1_features.py  24_merge_bureau_a1_light_features.py  25_train_static_person_applprev_bureaub_a1_light_xgboost.py  25_train_static_person_applprev_bureaub_a1_xgboost.py  25_train_static_person_applprev_bureaub_a1_xgboost_memory_safe.py  26_inspect_bureau_a2_tables.py  27_create_bureau_a2_features_light.py  28_merge_bureau_a2_light_features.py  29_train_static_person_applprev_bureaub_a1_a2_light_xgboost.py  30_log_final_v01_to_mlflow.py  31_create_fastapi_app.py
